--- a/tarea.html
+++ b/tarea.html
@@ -10,6 +10,14 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Etiquetas HTML</title>
     <!--base href="https://www.w3schools.com/" target="_blank"-->
+    <style type="text/css">
+        @media screen and (max-width:1034px){
+            #se {
+                width:100%; text-align: justify
+            }
+            
+        }
+    </style>
 </head>
 
 <body>
@@ -20,7 +28,7 @@
             </div>
         </div>
     </section>
-    <section style="width:80%;padding: 1em 3em;margin: 1em 10%; text-align: justify;">
+    <section id="se" style="width:80%;padding: 1em 3em;margin: 1em 10%; text-align: justify;">
         <!-- 1 a -->
         <section>
             <article>
@@ -2558,7 +2566,7 @@
             </div>
         </div>
     </section>
-    <section style="width:80%;padding: 1em 3em;margin: 1em 10%; text-align: justify;">
+    <section id="se" style="width:80%;padding: 1em 3em;margin: 1em 10%; text-align: justify;">
 
         <!-- 1 article -->
         <section>
